--- a/multiple_linear_regression_optimization/README
+++ b/multiple_linear_regression_optimization/README
@@ -1,5 +1,5 @@
 In this project, the main purpose is to optimize the number of samples which are used to train
-for multiple linear regression problems.
+multiple linear regression hypothesis.
 
 The following diagram shows the file/folder structure of the Project
 
